Bug 162283 - FILESAVE: PPT: placeholders not displayed after roundtrip
Summary: FILESAVE: PPT: placeholders not displayed after roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-07-31 16:43 UTC by Xisco Faulí
Modified: 2025-04-03 20:06 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-07-31 16:43:05 UTC
Steps to reproduce:
1. Open attachment 120662 [details] from bug 95932
2. Save it as PPT
3. Open the new document

-> Placeholders are gone

Reproduced in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8118d1be1be11e8c8c70a0a12da25f0fb3c250f1
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-07-31 16:43:59 UTC
Regression introduced by:

author	Tibor Nagy <tibor.nagy.extern@allotropia.de>	2024-06-27 12:15:23 +0200
committer	Nagy Tibor <tibor.nagy.extern@allotropia.de>	2024-06-27 21:56:23 +0200
commit df61a5846197a01c10322ac54731b6df7e0faf07 (patch)
tree 14054c4645257fd05a7bcfaed33a4bcf1c63ded6
parent a337a6ed162826f95cf52b88241d45c2b392d751 (diff)
tdf#157019 PPTX import: Workaround for object placeholder shape preset

Bisected with: bibisect-linux64-25.2
Comment 2 Commit Notification 2024-08-21 10:58:14 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/38f6f44a2cc854e652c09bbd7ee3511b5fed3f8e

tdf#162283 PPT export: fix regression...

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gerald Pfeifer 2024-08-22 10:18:12 UTC
Verified with last night's snapshot

  Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 560e5406f3c6e8e6ed0f1c251b6910465266ed8d
  CPU threads: 12; OS: Linux 6.10; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US


Note that in the PPT export text renders quite larger at 24pt and 18pt
versus 21pt and 15.7pt. This issue already exists in 24.2 and is not a
regression.
Comment 4 Commit Notification 2024-10-25 08:43:07 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/d63401bd391554b6ec0dae8ed788b1265af57f8d

tdf#162283 PPT export: fix regression...

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.