tdf#162283 PPT export: fix regression...

...was made by: Iefb9d97e0eb10a04c39b515b11e549aeb7be8f25

This regression occurred because there is a feature in MSO that allows
the shape of a placeholder to be changed. In this case, the placeholder
is converted into a custom shape after the import and saving custom shape from .pptx to .ppt didn't work.

Change-Id: I85305b65742da8b4966d4956b9141c59b4563973
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172091
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>
Tested-by: Jenkins